force-app/main/default/objects/Fabulous_Confetti_Message__c/Fabulous_Confetti_Message__c.object-meta.xml
<CustomObject>
    <description>This Object can be used to send confetti messages to certain Users as part of the Fabulous Confetti package.
For the User to receive Confetti the Component &quot;Fabulous Confetti Messages&quot; has to be added to the utility bar.</description>
    <label>Fabulous Confetti Message</label>
    <nameField>
        <displayFormat>FC-{0000000000}</displayFormat>
        <label>Fabulous Confetti Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fabulous Confetti Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>