force-app/main/default/objects/Fabulous_Confetti_Message__c/fields/Confetti_Type__c.field-meta.xml
<CustomField>
    <fullName>Confetti_Type__c</fullName>
    <inlineHelpText>What type of confetti should be sent. Check the documentation for available confetti types.</inlineHelpText>
    <label>Confetti Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>