force-app/main/default/objects/Fabulous_Confetti_Message__c/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <inlineHelpText>What text should be sent to your colleague?</inlineHelpText>
    <label>Message Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>