force-app/main/default/objects/Fabulous_Confetti_Message__c/fields/Target_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_User_Id__c</fullName>
    <inlineHelpText>To whom should the Confetti be sent?</inlineHelpText>
    <label>Target User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>